python/testData/quickFixes/PyAddImportQuickFixTest/qualifyNestedClassWithRegularImport/main.py
<warning descr="Unused import statement 'import pkg.src'">import pkg.src</warning>

<error descr="Unresolved reference 'Inner'">In<caret>ner</error>
